Add surefire for suitable Compress versions